Update ENTRYPOINT Add flag that makes JVM to start with native access enabled